fix(ffe-buttons): Stop buttons from breaking
BREAKING CHANGE: This commit makes sure our buttons stay on one line.
Previously, they were allowed to break on to two lines - which was not
allowed according to our design.

This change is marked as breaking, since there's a big change this will
impact some design (especially on mobile). In order to migrate, click
through your app and make sure you don't have any very long button
texts.

Fixes #264

--- a/packages/ffe-buttons/less/base-button.less
+++ b/packages/ffe-buttons/less/base-button.less
@@ -71,6 +71,7 @@
     text-decoration: none;
     transition: all @ffe-transition-duration @ffe-ease;
     user-select: none;
+    white-space: nowrap;
     width: 100%;
     .ffe-fontsize-button;
 
